[package]
name = "ssem-server"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
warp = { version = "0.4.2", features = ["server"] }
uuid = { version = "1.0", default-features = false, features = [ "v4" ] }
tokio = { version = "1", default-features = false, features = [ "rt-multi-thread", "macros" ] }
serde_json = "1"
serde = { version = "1", default-features = false, features = [ "derive" ] }
pretty_env_logger = "0.5"
anyhow = "1.0"
baby-emulator = { version = "0.2.1", features = ["i8"], default-features = false }
dotenv = "0.15"
base64 = "0.22.1"
mosquitto-client = "0.1.5"
